--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,46 +2,45 @@
 @import '../../node_modules/angular2-data-table/src/components/datatable';
 @import '../../node_modules/angular2-data-table/src/themes/material';
 
-html,
-body {
-	height: 100%;
-	font-size: $base-font-size;
+body,
+html {
+  height: 100%;
+  font-size: $base-font-size;
 }
 
 body {
-	overflow: hidden;
-	background: $serenity;
-	font-family: 'SFUIText-Regular', Arial, Helvetica, sans-serif;
+  overflow: hidden;
+  background: $serenity;
+  font-family: 'SFUIText-Regular', Arial, Helvetica, sans-serif;
 }
 
 app {
-	display: flex;
+  display: flex;
 }
 
 /*page layout start*/
 navigation-bar {
-	position: relative;
-	display: inline-block;
-	width: 160px;
-	height: 100vh;
-	transition: all .5s;
-	padding-right: 20px;
+  position: relative;
+  display: inline-block;
+  width: 160px;
+  height: 100vh;
+  transition: all .5s;
+  padding-right: 20px;
 
-	&.slide {
-		z-index: 2;
-		height: 100vh;
-		margin-left: -140px;
+  &.slide {
+    z-index: 2;
+    height: 100vh;
+    margin-left: -140px;
 
-		&:hover {
-			margin-left: 0;
-		}
-	}
+    &:hover {
+      margin-left: 0;
+    }
+  }
 }
 
 main {
-	width: 100%;
-	height: 100vh;
-	margin-left: -20px;
+  width: 100%;
+  height: 100vh;
+  margin-left: -20px;
 }
-
 /*page layout end*/
