--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -52,17 +52,25 @@
 		</div>
 	</div>
 	<div class="section">
-			<div class="left-side right-border">
-				<bd-input class="bd-form-control" [labelText]="'Phone'" formControlName="phone">
-				</bd-input>
-				<bd-input class="bd-form-control" [labelText]="'Fax'" *ngIf='isExpanded' formControlName="fax">
-				</bd-input>
-			</div>
-			<div class="right-side">
-				<bd-input class="bd-form-control" placeholder="Extension" formControlName="phoneExtension">
-				</bd-input>
-				<bd-input class="bd-form-control" placeholder="Extension" formControlName="faxExtension" *ngIf='isExpanded'>
-				</bd-input>
-			</div>
+  	<bd-validator [component]="addressForm.controls.phone" [errorDefs]="{required: 'Phone is required'}">
+      <div class="left-side right-border">
+        <bd-input class="bd-form-control" [labelText]="'Phone'" formControlName="phone">
+        </bd-input>
+      </div>
+      <div class="right-side">
+        <bd-input class="bd-form-control" placeholder="Extension" formControlName="phoneExtension">
+        </bd-input>
+      </div>
+    </bd-validator>
+    <div>
+      <div class="left-side right-border">
+        <bd-input class="bd-form-control" [labelText]="'Fax'" *ngIf='isExpanded' formControlName="fax">
+        </bd-input>
+      </div>
+      <div class="right-side">
+        <bd-input class="bd-form-control" placeholder="Extension" formControlName="faxExtension" *ngIf='isExpanded'>
+        </bd-input>
+      </div>
+    </div>
 	</div>
 </form>
