FSPA-88 #comment change items font size

--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -75,6 +75,7 @@
         height: $form-control-height;
         background: $white;
         color: $black;
+        font-size: 16px;
         padding-left: 17px;
         border-bottom: $border;
         align-items: center;
