FSPA-112 add inner box inset in all inputs

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -16,7 +16,7 @@
         </div>
       </div>
   </template>
-<form [formGroup]="loadForm" [class.edit]="isEditMode" [class.view]="!isEditMode">
+<form [formGroup]="loadForm" class="edit">
   <div class="bd-form">
     <div class="bd-form-title">
       Customer
