--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
@@ -2,7 +2,12 @@
 
 .bd-typeahead-container {
   position: relative;
-  background-color: inherit;
+
+  &,
+  bd-input {
+    background-color: inherit;
+    box-shadow: inherit;
+	}
 
   .dropdown-menu {
     width: 100%;
