--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -48,6 +48,7 @@
   margin-bottom: 0;
   flex-flow: row wrap;
   background-color: inherit;
+  box-shadow: inherit;
 
   .bd-label {
     display: flex;
