--- a/src/assets/styles/form-control.scss
+++ b/src/assets/styles/form-control.scss
@@ -14,6 +14,12 @@ form {
   }
 
   .bd-form-control {
+    box-shadow: inset 0 0 0 1px $white;
+
+    &:hover {
+      background-color: $white;
+    }
+
     &.bd-focused {
       background-color: $white;
     }
