--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,17 +25,15 @@
             [items]="items">
         </bd-dropdown>
         </div>
-
-        <datatable
-            class='material striped'
-            [rows]='rows'
-            [columns]="columns"
-            [columnMode]="'force'"
-            [headerHeight]="50"
-            [footerHeight]="50"
-            [rowHeight]="'auto'"
-            [limit]="10">
-        </datatable>
+        <swui-datatable
+          class="material striped"
+          [rows]="rows"
+          [columns]="columns"
+          [columnMode]="'force'"
+          [headerHeight]="50"
+          [footerHeight]="50"
+          [rowHeight]="'auto'">
+        </swui-datatable>
         <div style="width:500px; margin:100px auto;">
             <bd-input
                 placeholder=""
