--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,6 +28,7 @@
         <swui-datatable
           class="material striped"
           [rows]="rows"
+          [loadingIndicator]="loadingIndicator"
           [columns]="columns"
           [columnMode]="'force'"
           [headerHeight]="50"
