--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
@@ -14,8 +14,12 @@
     padding: 0;
     margin-top: 0;
 
+    .item-wrapper {
+      height: 75px;
+    }
+
     li {
-      height: 49px;
+      height: 75px;
       border-bottom: $border;
 
       bd-form-button {
@@ -33,9 +37,14 @@
       }
 
       a {
-        height: $form-control-height;
+        height: 75px;
         padding: 0;
       }
+
+      &:last-child {
+        height: $form-control-height;
+       }
     }
+
   }
 }
