FSPA-90 create base form for all forms

--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -18,6 +18,6 @@
     </second-pane>
 
     <third-pane>
-      <load-form *ngIf="selectedLoad" [load]="selectedLoad"></load-form>
+      <load-form *ngIf="selectedLoad" [load]="selectedLoad" [viewMode]="loadViewMode"></load-form>
     </third-pane>
 </multi-pane-layout>
