--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,7 +1,7 @@
-<bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChanged($event)" [viewMode]="viewMode" [class.edit]="isEditMode" [class.view]="!isEditMode">
+<bd-form-expand [expanded]="isExpanded" (changed)="onExpandChanged($event)" [viewMode]="viewMode" [class.edit]="isEditMode" [class.view]="!isEditMode">
 	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)" [class.edit]="isEditMode" [class.view]="!isEditMode">
-		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isFormExpanded'>
-			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isFormExpanded">
+		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isExpanded'>
+			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
 			</bd-input>
 			<bd-dropdown class="bd-form-control" [labelText]="'Customer type'" formControlName="customerType" [items]="customerTypes">
 			</bd-dropdown>
@@ -11,20 +11,20 @@
 				<bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
 				</bd-input>
 			</bd-validator>
-			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isFormExpanded">
+			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
 			</bd-input>
 		</bd-form-section>
-		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isFormExpanded'>
-			<address-form [group]='customerForm.controls.address' [isExpanded]="isFormExpanded" [address]='customer.address' [viewMode]="viewMode"></address-form>
+		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isExpanded'>
+			<address-form [group]='customerForm.controls.address' [isExpanded]="isExpanded" [address]='customer.address' [viewMode]="viewMode"></address-form>
 			<bd-input class="bd-form-control" [labelText]="'Email'" formControlName="email" *ngIf='isExpanded'>
 			</bd-input>
 		</bd-form-section>
-		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isFormExpanded' [isExpanded]="isFormExpanded">
+		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isExpanded' [isExpanded]="isExpanded">
 		 <label class="same-as-company-label bd-form-control">
 			 <input type="checkbox" (change)="sameAsCompanyChange($event)">
 			 <span>Same as Company Address</span>
 		 </label>
-		 <address-form [group]='customerForm.controls.billingAddresses' [isExpanded]="isFormExpanded" [address]='customer.billingAddresses' [viewMode]="viewMode"></address-form>
+		 <address-form [group]='customerForm.controls.billingAddresses' [isExpanded]="isExpanded" [address]='customer.billingAddresses' [viewMode]="viewMode"></address-form>
 		 <bd-textarea class="bd-form-control" [labelText]="'Notes'">
 		 </bd-textarea>
 		</bd-form-section>
