--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
@@ -13,6 +13,11 @@
     width: 100%;
     padding: 0;
     margin-top: 0;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top: 0;
 
     .item-wrapper {
       height: 75px;
