FSPA-142 temporary approach

--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
@@ -8,6 +8,7 @@
     <bd-spinner></bd-spinner>
   </template>
   <bd-input [ngModel]="value"
+      #input
       (focusChange)="onFocusChanged($event)"
       (ngModelChange)="changeValue($event)"
       [typeahead]="source"
