--- a/src/app/shared/components/bd-form-expand/bd-form-expand.component.scss
+++ b/src/app/shared/components/bd-form-expand/bd-form-expand.component.scss
@@ -8,9 +8,12 @@
   border-bottom: $border;
   align-items: center;
   justify-content: center;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
 
   &.open {
     margin-top: 20px;
+    border-radius: 3px;
   }
 
   &:hover {
