--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -20,6 +20,7 @@
 
           <div class="bd-input-infix">
             <input
+             test
               #input
               *ngIf="_elementType === 'input'"
               name="bd-input-element"
