--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <template #customItemTemplate let-model="item" let-index="index">
-      <div class="item-wrapper">
+      <div style="height:75px;" class="item-wrapper">
         <div class="left-panel">
           <div class="name">
               {{model.name}}
