--- a/src/app/shared/components/bd-validator/bd-validator.component.scss
+++ b/src/app/shared/components/bd-validator/bd-validator.component.scss
@@ -7,9 +7,11 @@
 .bd-invalid {
   .error-message {
     display: flex;
+    height: 35px;
     background: $light-red;
     color: $label-warning-color;
     text-align: left;
+    align-items: center;
 
     i {
       margin: 0 15px 0 17px;
