--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.scss
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.scss
@@ -1,19 +1,22 @@
+@import '../../../../assets/styles/variables';
+
 .commodity-form {
   min-width: 365px; 
 }
 
 .header {
   display: flex;
+  background: $white;
 
   div {
-    flex: 1;
     display: flex;
+    height: 50px;
+    text-align: center;
+    flex: 1;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    height: 50px;
     border-style: solid;
-    border-color: lightgray;
+    border-color: $grey;
     border-width: 0 1px 1px 0;
 
     &:last-child {
@@ -22,27 +25,15 @@
 
     &.active {
       p {
-        color: #87bce6;
+        color: $blue;
       }
     }
 
     p {
-      font-size: 10px;
       margin: 0;
-      color: #757575;
+      color: $dark-grey;
+      font-size: 10px;
       cursor: default;
     }
   }
 }
-
-.add-button{
-  width: 100%;
-  height: 50px;
-  background: white;
-  border-style: solid;
-  border-color: lightgray;
-  border-width: 0 0 1px 0;
-  outline: none;
-  box-shadow: none;
-  padding: 0;
-} 
