--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -1,4 +1,4 @@
-<div class="commodity" [formGroup]="commodityForm" class="commodity">
+<div [formGroup]="commodityForm">
   <div class="c-row">
       <input class="c-col"
         *ngFor="let field of fields; let i = index"
