--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.scss
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.scss
@@ -10,7 +10,7 @@
 
   div {
     display: flex;
-    height: 50px;
+    height: $form-control-height;
     text-align: center;
     flex: 1;
     align-items: center;
@@ -32,7 +32,7 @@
     p {
       margin: 0;
       color: $dark-grey;
-      font-size: 10px;
+      font-size: $mini-font-size;
       cursor: default;
     }
   }
