--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.scss
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.scss
@@ -2,7 +2,7 @@
 
 .add-button {
   width: 100%;
-  height: 50px;
+  height: $form-control-height;
   padding: 0;
   background: $white;
   border-style: solid;
