FSPA-145 add addresses form, integrate it with customer

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -6,7 +6,7 @@
               {{model.name}}
           </div>
           <div class="address">
-              {{model.address.streetAddress}}
+              {{model.addresses[0]?.streetAddress}}
           </div>
         </div>
         <div class="right-panel">
