--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -14,19 +14,8 @@
 			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
 			</bd-input>
 		</bd-form-section>
-		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isExpanded'>
-			<address-form [group]='customerForm.controls.address'[address]='customer.address' [viewMode]="viewMode"></address-form>
-			<bd-input class="bd-form-control" [labelText]="'Email'" formControlName="email" *ngIf='isExpanded'>
-			</bd-input>
-		</bd-form-section>
-		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isExpanded' [isExpanded]="isExpanded">
-		 <label class="same-as-company-label bd-form-control">
-			 <input type="checkbox" (change)="sameAsCompanyChange($event)">
-			 <span>Same as Company Address</span>
-		 </label>
-		 <address-form [group]='customerForm.controls.billingAddresses' [address]='customer.billingAddresses' [viewMode]="viewMode"></address-form>
-		 <bd-textarea class="bd-form-control" [labelText]="'Notes'">
-		 </bd-textarea>
+		<bd-form-section [labelText]="'CUSTOMER > ADDRESSES'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
+			<addresses-form [group]='customerForm.controls.addresses'[addresses]='customer.addresses' [viewMode]="viewMode"></addresses-form>
 		</bd-form-section>
 		<div class="section btn-container" *ngIf="isEditMode">
 			<bd-button
