FSPA-147 #comment add remove/add buttons and integrate in commodity form

--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -8,13 +8,11 @@
         (blur)="onBlur($event)"
         (focus)="onFocus($event)">
   </div>
-  <button
+  <bd-remove-button
     *ngIf="_isActive && !isRemoveButtonHidden"
     index=""
-    class="remove-button"
     (mousedown)="onRemove()"
     (blur)="onBlur($event)"
     (focus)="onFocus($event)">
-    Remove
-  </button>
+  </bd-remove-button>
 </div>
