--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -117,4 +117,16 @@
       }
     }
   }
+
+  &.view-mode {
+    .bd-dropdown-icon {
+      display: none;
+    }
+
+    &:hover {
+      .bd-dropdown-icon {
+        display: block;
+      }
+    }
+  }
 }
