--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -9,6 +9,7 @@
   <bd-dropdown
       *ngSwitchCase="false"
       [labelText]="labelText"
+      [viewMode]="true"
       [defaultTitleText]="defaultTitleText"
       [dropdownHeaderTemplate]="dropdownHeaderTemplate"
       [dropdownFooterTemplate]="dropdownFooterTemplate"
