--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -14,25 +14,23 @@
   [(value)]="_placeQuery"
   [itemTemplate]="customItemTemplate"
 	[removeButtonHidden]="false"
-  (onRemove)="onAddressRemove(streetAddress, city, state, zip)"
+  (onRemove)="onAddressRemove()"
   (onSelect)="onPlaceSelect($event)"
 	[optionField]="'description'">
 </bd-typeahead>
 	<div class="section">
 		<div class="left-side right-border">
 		<bd-input
-      #streetAddress
 			class="bd-form-control"
 			placeholder="Street address 2"
 			(valueChange)="onRemoveMap($event)"
 			formControlName="secondStreetAddress">
 		</bd-input>
-			<bd-input #city class="bd-form-control" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
+			<bd-input class="bd-form-control" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
 			</bd-input>
 			<div class="section">
 				<div class="right-border half-side">
 					<bd-input
-           #state
 					 class="bd-form-control"
 					 placeholder="State"
 					 formControlName="state"
@@ -40,7 +38,6 @@
 					</bd-input>
 				</div>
 				<bd-input
-          #zip
 					class="bd-form-control half-side"
 					placeholder="Zip"
 					(valueChange)="onRemoveMap($event)"
