FSPA-147 add left label

--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.html
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.html
@@ -2,6 +2,7 @@
   [disabled]="disabled"
   [type]="type"
   class="button">
-  <img class="icon" [src]="iconUrl" alt="Button">
-  <span *ngIf="text.length" class="text">{{text}}</span>
+  <span *ngIf="preLabel.length" class="pre-label text">{{preLabel}}</span>
+  <span class="icon"><img [src]="iconUrl" alt="Button"></span>
+  <span *ngIf="sufLabel.length" class="suf-label text">{{sufLabel}}</span>
 </button>
