--- a/src/app/forms/load-form/load-form.component.scss
+++ b/src/app/forms/load-form/load-form.component.scss
@@ -5,8 +5,9 @@
   max-width: 100%;
 }
 
-.item-wrapper {
+.customer-item-wrapper {
   display: flex;
+  height: 75px;
   padding: 0 17px;
   flex-direction: row;
   justify-content: space-between;
