--- a/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-add-remove-button/bd-add-remove-button.component.scss
@@ -13,7 +13,7 @@
   outline: 0;
   align-items: center;
 
-  .suf-label {
+  .suffix-label {
     margin: auto 11px auto 6px;
   }
 
@@ -29,7 +29,7 @@
     }
   }
 
-  .pre-label {
+  .prefix-label {
     margin-left: 11px;
   }
 
