--- a/src/assets/styles/form-control.scss
+++ b/src/assets/styles/form-control.scss
@@ -1,10 +1,33 @@
 @import './variables';
 
 form {
+  .left-control-border {
+    border-right: $border;
+  }
+
+  .right-control-border {
+    border-left: $border;
+  }
+
+  .bottom-control-border {
+    border-bottom: $border;
+  }
+
   &.view {
     .bd-form-control {
-      box-shadow: inset 0 0 0 1px $white;
       background-color: $light-blue;
+
+      &.left-control {
+        box-shadow: inset  -1px  1px 0 0 $white, inset  0 -1px 0 0 $white;
+      }
+
+      &.middle-control {
+        box-shadow: inset  0  1px 0 0 $white, inset  0 -1px 0 0 $white;
+      }
+
+      &.right-control {
+        box-shadow: inset  1px  1px 0 0 $white, inset  0 -1px 0 0 $white;
+      }
     }
   }
 
