FSPA-88 show arrows only on hover in view mode

--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -118,3 +118,16 @@
     }
   }
 }
+
+//sass-lint:disable force-element-nesting
+:host-context(.view).bd-form-control {
+  .bd-dropdown-icon {
+    display: none;
+  }
+
+  &:hover {
+    .bd-dropdown-icon {
+      display: block;
+    }
+  }
+}
