--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -15,7 +15,7 @@
 			</bd-input>
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > ADDRESSES'" [isExpanded]='isExpanded' *ngIf='isExpanded' >
-			<addresses-form [group]='customerForm.controls.addresses'[addresses]='customer.addresses' [viewMode]="viewMode"></addresses-form>
+			<addresses-form [formArray]='customerForm.controls.addresses'[items]='customer.addresses' [viewMode]="viewMode"></addresses-form>
 		</bd-form-section>
 		<div class="section btn-container" *ngIf="isEditMode">
 			<bd-button
