--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -7,7 +7,7 @@
     </div>
 </template>
 <bd-typeahead
-	class="bd-form-control middle-control"
+	class="bd-form-control"
 	formControlName="streetAddress"
 	placeholder="Street address 1"
   [source]="_placeSource"
@@ -20,12 +20,12 @@
 	<div class="section">
 		<div class="left-side left-control-border">
 		<bd-input
-			class="bd-form-control middle-control"
+			class="bd-form-control"
 			placeholder="Street address 2"
 			(valueChange)="onRemoveMap($event)"
 			formControlName="secondStreetAddress">
 		</bd-input>
-			<bd-input class="bd-form-control middle-control" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
+			<bd-input class="bd-form-control" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
 			</bd-input>
 			<div class="section">
 				<div class="half-side left-control-border">
