--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,31 +1,31 @@
 <bd-form-expand (changed)="onExpandChanged($event)" [viewMode]="viewMode" [class.edit]="isEditMode" [class.view]="!isEditMode">
 	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)" [class.edit]="isEditMode" [class.view]="!isEditMode">
 		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isExpanded'>
-			<bd-input class="bd-form-control middle-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
+			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isExpanded">
 			</bd-input>
-			<bd-dropdown class="bd-form-control middle-control" [labelText]="'Customer type'" formControlName="customerType" [items]="customerTypes">
+			<bd-dropdown class="bd-form-control" [labelText]="'Customer type'" formControlName="customerType" [items]="customerTypes">
 			</bd-dropdown>
-			<bd-form-switch class="bd-form-control middle-control" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="customerStatuses">
+			<bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="customerStatuses">
 			</bd-form-switch>
 			<bd-validator [component]="customerForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
-				<bd-input class="bd-form-control middle-control" [labelText]="'MC #'" formControlName="mc">
+				<bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
 				</bd-input>
 			</bd-validator>
-			<bd-input class="bd-form-control middle-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
+			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isExpanded">
 			</bd-input>
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isExpanded'>
 			<address-form [group]='customerForm.controls.address'[address]='customer.address' [viewMode]="viewMode"></address-form>
-			<bd-input class="bd-form-control middle-control" [labelText]="'Email'" formControlName="email" *ngIf='isExpanded'>
+			<bd-input class="bd-form-control" [labelText]="'Email'" formControlName="email" *ngIf='isExpanded'>
 			</bd-input>
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isExpanded' [isExpanded]="isExpanded">
-		 <label class="same-as-company-label bd-form-control middle-control">
+		 <label class="same-as-company-label bd-form-control">
 			 <input type="checkbox" (change)="sameAsCompanyChange($event)">
 			 <span>Same as Company Address</span>
 		 </label>
 		 <address-form [group]='customerForm.controls.billingAddresses' [address]='customer.billingAddresses' [viewMode]="viewMode"></address-form>
-		 <bd-textarea class="bd-form-control middle-control" [labelText]="'Notes'">
+		 <bd-textarea class="bd-form-control" [labelText]="'Notes'">
 		 </bd-textarea>
 		</bd-form-section>
 		<div class="section btn-container" *ngIf="isEditMode">
