--- a/src/assets/styles/form-control.scss
+++ b/src/assets/styles/form-control.scss
@@ -16,13 +16,14 @@ form {
   &.view {
     .bd-form-control {
       background-color: $light-blue;
+      box-shadow: inset  0  1px 0 0 $white, inset  0 -1px 0 0 $white;
 
       &.left-control {
         box-shadow: inset  -1px  1px 0 0 $white, inset  0 -1px 0 0 $white;
       }
 
       &.middle-control {
-        box-shadow: inset  0  1px 0 0 $white, inset  0 -1px 0 0 $white;
+        box-shadow: inset 0 0 0 1px $white; 
       }
 
       &.right-control {
