FSPA-112 fix: missing fax right borfer

--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -65,7 +65,7 @@
     </div>
     </bd-validator>
     <div class="section">
-      <div class="left-side right-border">
+      <div class="left-side left-control-border">
         <bd-input class="bd-form-control left-control" [labelText]="'Fax'" *ngIf='isExpanded' formControlName="fax">
         </bd-input>
       </div>
