FSPA-147 set add/remove buttons background color to inherit

--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -9,6 +9,7 @@
         (focus)="onFocus($event)">
   </div>
   <bd-remove-button
+    class="remove-button"
     *ngIf="_isActive && !isRemoveButtonHidden"
     index=""
     (mousedown)="onRemove()"
