--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.html
@@ -3,4 +3,4 @@
   [group]="formGroup"
   [commodities]="commodities">
 </base-commodity-form>
-<bd-add-button (mousedown)="onAdd()"></bd-add-button>
+<bd-add-button class="add-button" (mousedown)="onAdd()"></bd-add-button>
