FSPA-147 style add/remove buttons in commodity form depends of view mode

--- a/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/base-commodity-form.component.html
@@ -9,6 +9,7 @@
   <commodity
     *ngFor="let commodity of commoditiesFormControl.controls; let i = index"
     [isRemoveButtonHidden]="commoditiesFormControl.controls.length === 1"
+    [viewMode]="viewMode"
     [group]="commoditiesFormControl.controls[i]"
     [fields]="_fields"
     (blur)="onBlur($event)"
