--- a/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.scss
+++ b/src/app/forms/commodities-forms/pick-up-commodity-form/pick-up-commodity-form.component.scss
@@ -1,5 +1,2 @@
 @import '../../../../assets/styles/variables';
-
-.add-button {
-  background-color: $white;
-}
+@import '../../../../assets/styles/form-control';
