--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -38,7 +38,7 @@
      </bd-validator>
       <customer-form *ngIf='selectedCustomer' [customer]='selectedCustomer' (save)="onCustomerSave($event)" (cancel)="onCustomerEditCancel()" [viewMode]="customerViewMode"> </customer-form>
         <bd-form-section [labelText]="'PICKUPS'">
-          <pick-up-commodity-form [group]="getCommoditiesFormGroup()" [commodities]="stops[0].commodities"></pick-up-commodity-form>
+          <pick-up-commodity-form [group]="getCommoditiesFormGroup()" [commodities]="stops[0].commodities" [viewMode]="customerViewMode"></pick-up-commodity-form>
         </bd-form-section>
         <bd-form-section [labelText]="'REQUIREMENTS'">
         <bd-form-switch class="bd-form-control" [labelText]="'Driver'" [enableButtonSwitch]="isEditMode" formControlName="driverRequirment" [items]="driverRequirmentsNames">
