--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.html
@@ -9,7 +9,7 @@
         (focus)="onFocus($event)">
   </div>
   <bd-remove-button
-    class="remove-button"
+    class="bd-form-control"
     *ngIf="_isActive && !isRemoveButtonHidden"
     index=""
     (mousedown)="onRemove()"
