--- a/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.scss
+++ b/src/app/forms/commodities-forms/base-commodity-form/components/commodity/commodity.component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../../assets/styles/variables';
+@import '../../../../../../assets/styles/form-control';
 
 .c-row {
   display: flex;
@@ -23,8 +24,4 @@
       border-right-width: 0;
     }
   }
-}
-
-.remove-button {
-  background-color: $white;
 }
