FSPA-112 integrate new BaseForm`s approach to child forms.

--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm" [class.edit]="isEditMode" [class.view]="!isEditMode">
+<form [formGroup]="addressForm">
 	<template #customItemTemplate let-model="item" let-index="index">
     <div class="item-wrapper">
 			<div class="text">
