--- a/src/assets/styles/form-control.scss
+++ b/src/assets/styles/form-control.scss
@@ -1,11 +1,15 @@
 @import './variables';
 
-*,
 :host {
-  &.view {
+  &.bd-view-mode {
     .bd-form-control {
       background-color: $light-blue;
       box-shadow: inset  0  1px 0 0 $white, inset  0 -1px 0 0 $white;
+
+      &:hover,
+      &.bd-focused {
+        background-color: $white;
+      }
 
       &.left-control {
         box-shadow: inset  -1px  1px 0 0 $white, inset  0 -1px 0 0 $white;
@@ -21,7 +25,7 @@
     }
   }
 
-  &.edit {
+  &.bd-edit-mode {
     .bd-form-control {
       background-color: $white;
     }
@@ -36,14 +40,6 @@
 
     &.middle-control {
       border-right: $border;
-    }
-
-    &:hover {
-      background-color: $white;
-    }
-
-    &.bd-focused {
-      background-color: $white;
     }
   }
 }
