--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -32,7 +32,33 @@
        </bd-typeahead>
      </bd-validator>
       <customer-form *ngIf='selectedCustomer' [customer]='selectedCustomer' (save)="onCustomerSave($event)" (cancel)="onCustomerEditCancel()" [viewMode]="customerViewMode"> </customer-form>
-        <bd-form-section [labelText]="'PICKUPS'">
+      <bd-form-section>
+        <bd-dropdown
+          *ngIf='selectedCustomer'
+          class="bd-form-control"
+          labelText='Address'
+          clearLabel='Leave Empty'
+          formControlName="addressId"
+          defaultTitleText="Select address"
+          [items]="selectedCustomer.addresses"
+          keyField="id"
+          valueField="name">
+        </bd-dropdown>
+      </bd-form-section>
+      <bd-form-section>
+        <bd-dropdown
+          *ngIf='selectedCustomer'
+          clearLabel='Leave Empty'
+          class="bd-form-control"
+          labelText='Billing Address'
+          formControlName="billingAddressId"
+          defaultTitleText="Select Billing Address"
+          [items]="selectedCustomer.addresses"
+          keyField="id"
+          valueField="name">
+        </bd-dropdown>
+      </bd-form-section>
+      <bd-form-section [labelText]="'PICKUPS'">
           <pick-up-commodity-form [group]="getCommoditiesFormGroup()" [commodities]="stops[0].commodities" [viewMode]="customerViewMode"></pick-up-commodity-form>
         </bd-form-section>
         <bd-form-section [labelText]="'REQUIREMENTS'">
