--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -29,6 +29,12 @@
             [ngTemplateOutlet]="dropdownHeaderTemplate">
           </template>
       </li>
+      <li
+        *ngIf="!dropdownHeaderTemplate && clearLabel"
+        class="dropdown-header"
+        (click)="_handleDropdownHeaderClick($event)">
+          {{clearLabel}}
+      </li>
       <li *ngFor="let item of _items"
           (click)="_handleDropdownItemClick($event, item)">
           <div *ngIf="dropdownItemTemplate">
