--- a/src/app/shared/components/bd-form-section/bd-form-section.component.scss
+++ b/src/app/shared/components/bd-form-section/bd-form-section.component.scss
@@ -1,6 +1,11 @@
-.bd-section-title {
-  margin: 30px 0 20px 15px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  word-spacing: 3px;
+:host {
+  display: block;
+  padding-top: 20px;
+
+  .bd-section-title {
+    margin: 10px 0 20px 15px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    word-spacing: 3px;
+  }
 }
