--- a/src/app/shared/components/bd-form-section/bd-form-section.component.scss
+++ b/src/app/shared/components/bd-form-section/bd-form-section.component.scss
@@ -5,8 +5,9 @@
   padding-top: 20px;
 
   .bd-section-title {
-    margin: 10px 0 20px 15px;
+    margin: 10px 17px 20px;
     font-size: $small-font-size;
+    text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 2px;
     word-spacing: 3px;
